--- a/heart.html
+++ b/heart.html
@@ -10,7 +10,7 @@
     <title>heart</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- CSS only -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 
 </head>
 
@@ -26,9 +26,10 @@
         </div>
 
     </div>
-    <button class="  btn btn-outline-dark"> Play </button>
+    <button class="btn btn-outline-dark button"> Play </button>
 
 
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
